@@ -1,3 +1,4 @@
+#include <stdlib.h>
 #include <stdio.h>
 
 extern int total_tests;
